# Helio-Wallet

./: .env.example  .gitignore  .gitmodules  agents.md  biome.json  claude.md  flow.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  readme.md  requirements.md  tailwind.config.js  techstack.md  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json  vite.config.ts
anchor/: Anchor.toml  README.md  package.json
anchor/programs/helio/: Cargo.toml
anchor/programs/helio/src/: constants.rs  errors.rs  lib.rs  utils.rs
anchor/programs/helio/src/instructions/: close_reserve.rs  initialize.rs  mod.rs  send_sol.rs  sweep_sol.rs  sweep_stable.rs  update_config.rs  withdraw_sol.rs  withdraw_stable.rs  withdraw_vault_sol.rs
anchor/programs/helio/src/state/: config.rs  mod.rs  reserve.rs  sol_vault.rs
anchor/tests/: helio.ts
apps/extension/: package.json  tsconfig.json  vite.config.ts
apps/mobile/: App.tsx  package.json  tsconfig.json  vitest.config.ts
backup_ui/: App.tsx  main.tsx
backup_ui/contexts/: WalletContext.tsx
backup_ui/screens/: HomeScreen.tsx  SwapScreen.tsx  VaultScreen.tsx
docs/: architecture.md  user-stories.md
docs/adr/: 0001-package-boundaries.md  0002-send-flow-boundaries.md
extension/: tsconfig.json
mobile/: index.ts  tsconfig.json
public/: manifest.json
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src/app/: app.test.tsx  app.tsx  mock-data.ts  popup-view.types.ts  popup-view.utils.test.ts  use-popup-view.hooks.ts
src/contexts/: RouterContext.tsx  (+2 more)
web/: package.json  tsconfig.json  vite.config.ts
(+174 files in other folders)
